# prussian-eval

./: .gitignore  README.md  pyproject.toml  run_eval.sh  run_multi_model_eval.sh
data/: quasi_gold.jsonl
docker/llamacpp-prism/: Dockerfile
evals/: corpus_dataset.py  reconstruction.py
evals/providers/: cohere.py
scripts/: build_quasi_gold.py  ragas_analysis.py  runpod_deploy_bonsai.sh  runpod_deploy_vllm.sh  runpod_gpu.sh  runpod_pod.sh
