[project]
name = "prussian-eval"
version = "0.1.0"
description = "inspect-ai reconstruction eval suite for prussian-mcp"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "prussian-mcp",
    "inspect-ai>=0.3.247",
    "openai>=1.50",
    "ragas>=0.2",
    "runpod>=1.10.0",
    "flash>=1.0.3",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

# prussian-mcp wird editierbar aus dem Geschwister-Checkout eingebunden
# (In-Process-Import von prussian.tools / prussian.adapters.inspect_tools
# statt Subprozess).  Liegt der Checkout woanders, diesen Pfad anpassen und
# `uv sync` erneut ausführen.  Voraussetzung: dort gebaute FST/CG3-Artefakte
# (make -C ../fst all cg3-check) und die ConLLU-Silberdaten (make -C ../fst
# conllu) sowie der Korpus in ../corpus/parsed/.
[tool.uv.sources]
prussian-mcp = { path = "../mcp", editable = true }
